# Interview

./: .coveragerc  Pipfile  README.md  project.toml  requirements.txt  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/workflows/: test.yml
interview/algorithm/: kmeans.py  knn.py  naive_bayes.py  sgd.py  sort.py
interview/data_structure/: binary_search_tree.py  singly_linked_list.py
tests/: test_setup.py
tests/algorithm/: test_kmeans.py  test_knn.py  test_naive_bayes.py  test_quicksort.py  test_sgd.py  test_sort.py
tests/data_strucuture/: test_binary_search_tree.py  test_singly_linked_list.py
