[metadata]
name = interview
version = 0.1
author = Ben RdO
author_email = b.rouille.d.orfeuil@gmail.com
description = Cracking the coding interview
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/PowerSimData
project_urls =
    Bug Tracker = https://github.com/rouille/Interview/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
